--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -34,5 +34,5 @@
     </div>
   </div>
   <!-- Submit Button -->
-  <input [disabled]="!form.valid || processing" class="btn btn-primary" type="submit" value="Login" />
+  <input [disabled]="!form.valid" class="btn btn-primary" type="submit" value="Login" />
 </form>
