--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -132,7 +132,7 @@
                               <td>{{counselor.type.type}}</td>
                               <td *ngIf="counselor.specialty">{{counselor.specialty.name}}</td>
                               <td *ngIf="!counselor.specialty">
-                                  <app-specialties-dropdown *ngIf="i==0 && counselor.type.type=='specialist'" (selectedChanged) = "preAddSpecialty($event,counselor)"></app-specialties-dropdown>
+                                  <app-specialties-dropdown *ngIf="i==0 && counselor.type.type=='specialist'" (selectedChanged) = "preAddSpecialty($event,counselor)" [specialties]="specialties"></app-specialties-dropdown>
                                   <button *ngIf="i==0 && counselor.type.type=='specialist'" class="btn btn-primary" (click) = "addSpecialty(counselor)">Add</button>
                               </td>
                               <td *ngIf="i!=0 && counselor.hired">Hired</td>
