--- a/client/src/app/components/head-staff/head-staff.component.html
+++ b/client/src/app/components/head-staff/head-staff.component.html
@@ -24,7 +24,7 @@
       <div class="form-group">
         <label for="type">Type</label>
         <div>
-            <app-head-staff-type-dropdown (selectedChanged) = "preAddType($event,type)"></app-head-staff-type-dropdown>
+            <app-head-staff-type-dropdown (selectedChanged) = "preAddType($event,type)" [types]="types"></app-head-staff-type-dropdown>
         </div>
       </div>
     <div class="form-group">
