--- a/client/src/app/components/head-staff/head-staff.component.html
+++ b/client/src/app/components/head-staff/head-staff.component.html
@@ -44,7 +44,7 @@
   </form>
 </div>
 <button class="btn btn-primary" (click) = "showAdd()" *ngIf = "!newHead">Add</button>
-<table class="table">
+<table class="table table-hover">
     <tr>
       <th>First</th>
       <th>Last</th>
@@ -52,7 +52,7 @@
       <th>Type</th>
       <th></th>
     </tr>
-    <tr *ngFor="let head of heads">
+    <tr *ngFor="let head of heads" (click)="goToHead(head)">
       <td>{{head.first}}</td>
       <td>{{head.last}}</td>
       <td>{{head.email}}</td>
