--- a/client/src/app/components/swim-stats/swim-stats.component.html
+++ b/client/src/app/components/swim-stats/swim-stats.component.html
@@ -9,6 +9,7 @@
           <th>Last</th>
           <th>Red Cross Level</th>
           <th>Swim Bracelet</th>
+          <th>Most Recent Report Sent</th>
         </tr>
       </thead>
       <tbody>
@@ -17,6 +18,7 @@
           <td>{{camper.last}}</td>
           <td>{{camper.cSwimOpts.currentLevel?.rcLevel}}</td>
           <td>{{camper.cSwimOpts.bracelet}}</td>
+          <td>{{displayDateHelper(camper.cSwimOpts.mostRecentReportSent)}}</td>
         </tr>
       </tbody>
     </table>
