--- a/client/src/app/components/evaluations/evaluations.component.html
+++ b/client/src/app/components/evaluations/evaluations.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <div *ngIf="ready">
 <div *ngIf="authService.admin()">
     <div class="panel with-nav-tabs">
