--- a/client/src/app/components/game/game.component.html
+++ b/client/src/app/components/game/game.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <div *ngIf="game">
   <h2>{{game.name}}</h2>
   <h3>{{displayDateTime(game.date)}}</h3>
