--- a/client/src/app/components/swim-group/swim-group.component.html
+++ b/client/src/app/components/swim-group/swim-group.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-back-button></app-back-button>
 <div *ngIf="swimGroup && swimGroup.data">
   <h1>{{swimGroup.data.name}}</h1>
