--- a/client/src/app/components/swim-level/swim-level.component.html
+++ b/client/src/app/components/swim-level/swim-level.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-back-button></app-back-button>
 <div *ngIf="swimLevel">
   <h1>Red Cross Level {{swimLevel.rcLevel}} - {{swimLevel.name}}</h1>
