--- a/client/src/app/components/swim-levels/swim-levels.component.html
+++ b/client/src/app/components/swim-levels/swim-levels.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <form [formGroup]="form" (submit)="createSwimLevelSubmit()">
   <div class="form-group">
       <label for="num">Level Number</label>
