--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<app-loading *ngIf="loading"></app-loading>
 <div class="container">
   <!-- <flash-messages></flash-messages> -->
   <router-outlet></router-outlet>
