--- a/client/src/app/components/approvers/approvers.component.html
+++ b/client/src/app/components/approvers/approvers.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <div *ngFor="let gender of divisions">
   <h2 *ngIf="gender._id.gender=='male'">Boys Side</h2>
   <h2 *ngIf="gender._id.gender=='female'">Girls Side</h2>
