--- a/client/src/app/components/dietary/dietary.component.html
+++ b/client/src/app/components/dietary/dietary.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <div *ngIf="authService.admin()">
     <div class="panel with-nav-tabs">
         <div class="panel-heading">
