--- a/client/src/app/components/evaluate/evaluate.component.html
+++ b/client/src/app/components/evaluate/evaluate.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-back-button></app-back-button>
 <h2>Evaluation #{{evaluation?.evaluation.number}} for {{evaluation?.counselor.first}} {{evaluation?.counselor.last}}</h2>
 <h3>Session: {{evaluation?.evaluation.session.name}}</h3>
