--- a/client/src/app/components/game-calendar/game-calendar.component.html
+++ b/client/src/app/components/game-calendar/game-calendar.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-calendar (selection)="dateSelected($event)" (changeVisible)="getGames($event)" [events] = "games"></app-calendar>
 <div *ngIf="selectedDate">
   <h2>{{selectedDate.day}} {{getMonthName(selectedDate.date.month)}} {{selectedDate.date.day}}, {{selectedDate.date.year}}</h2>
