--- a/client/src/app/components/head-staff-profile/head-staff-profile.component.html
+++ b/client/src/app/components/head-staff-profile/head-staff-profile.component.html
@@ -1,2 +1,3 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-back-button></app-back-button>
 <app-password-reset [user]="user"></app-password-reset>
