--- a/client/src/app/components/roster/roster.component.html
+++ b/client/src/app/components/roster/roster.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="loading"></app-loading>
 <div><a href="/rosters">Back</a></div>
 <div id="camper-selector" *ngIf="!viewing">
   <app-camper-selector [exclude]="exclude" (selection)="addToRoster($event)"></app-camper-selector>
