--- a/client/src/app/components/head-staff/head-staff.component.html
+++ b/client/src/app/components/head-staff/head-staff.component.html
@@ -53,11 +53,11 @@
       <th>Type</th>
       <th></th>
     </tr>
-    <tr *ngFor="let head of heads" (click)="goToHead(head)">
-      <td>{{head.first}}</td>
-      <td>{{head.last}}</td>
-      <td>{{head.email}}</td>
-      <td *ngIf="head.type">{{head.type.type}}</td>
+    <tr *ngFor="let head of heads">
+      <td (click)="goToHead(head)">{{head.first}}</td>
+      <td (click)="goToHead(head)">{{head.last}}</td>
+      <td (click)="goToHead(head)">{{head.email}}</td>
+      <td  (click)="goToHead(head)" *ngIf="head.type">{{head.type.type}}</td>
       <td *ngIf="!head.type">
           <app-head-staff-type-dropdown (selectedChanged) = "preAddhType($event,head)" [types]="types"></app-head-staff-type-dropdown>
           <button class="btn btn-primary" (click) = "addhType(head)">Add</button>
