--- a/client/src/app/components/specialties-dropdown/specialties-dropdown.component.html
+++ b/client/src/app/components/specialties-dropdown/specialties-dropdown.component.html
@@ -1,3 +1,3 @@
-<select (change) = "handleChange($event);">
+<select (change) = "handleChange($event);" *ngIf="specialties">
   <option *ngFor="let specialty of specialties; index as i" value="{{i}}">{{specialty.name}}</option>
 </select>  
