--- a/client/src/app/components/swim-groups/swim-groups.component.html
+++ b/client/src/app/components/swim-groups/swim-groups.component.html
@@ -25,6 +25,6 @@
   <tr *ngFor="let group of groups">
     <td>{{group.data.name}}</td>
     <td>{{group.lifeguard?.first}} {{group.lifeguard?.last}}</td>
-    <td><a class="btn btn-primary" [routerLink]="['/swim-group',group.data._id]">View</a><button class="btn btn-primary" (click) = "removeGroup(group.data._id)">X</button></td>
+    <td><a class="btn btn-primary" [routerLink]="['/swim-group',group.data._id]">View</a><button *ngIf="authService.admin()" class="btn btn-primary" (click) = "removeGroup(group.data._id)">X</button></td>
   </tr>
 </table>
