--- a/client/src/app/components/questions/questions.component.html
+++ b/client/src/app/components/questions/questions.component.html
@@ -18,14 +18,14 @@
       </div>
 
       <div class="form-group">
-        <label for="type">Type</label>
+        <label for="type">Counselor Type</label>
         <div>
             <app-counselor-types-dropdown (selectedChanged) = "preAddType($event,type)"></app-counselor-types-dropdown>
         </div>
       </div>
 
       <div class="form-group">
-        <label for="headStaff-type">Type</label>
+        <label for="headStaff-type">Evaluator Type</label>
         <div>
             <app-head-staff-type-dropdown (selectedChanged) = "preAddhType($event,type)" [types]="hsTypes"></app-head-staff-type-dropdown>
         </div>
