--- a/client/src/app/components/campers/campers.component.html
+++ b/client/src/app/components/campers/campers.component.html
@@ -92,7 +92,7 @@
                               <th>First</th>
                               <th>Last</th>
                               <th>Gender</th>
-                              <th>Division</th>
+                              <th>{{options.howWeSay.division}}</th>
                               <th *ngIf="i!=0"></th>
                               <th *ngIf="i!=0"><button class="btn btn-primary" (click) = "massReenroll()">Reenroll Selected</button></th>
                               <th *ngIf="i==0"></th>
