--- a/client/src/app/components/swim-groups/swim-groups.component.html
+++ b/client/src/app/components/swim-groups/swim-groups.component.html
@@ -1,6 +1,6 @@
 <app-loading *ngIf="loading"></app-loading>
-<button class="btn btn-primary" (click)="generateGroups()" *ngIf="authService.userType() != 'lifeguard'">Auto-Generate Groups</button>
-<form [formGroup]="form" (submit)="createSwimGroupSubmit()" *ngIf="authService.userType() != 'lifeguard'">
+<button class="btn btn-primary" (click)="generateGroups()" *ngIf="authService.userType() != 'lifeguard' && (authService.userType() != 'leader'||authService.admin())">Auto-Generate Groups</button>
+<form [formGroup]="form" (submit)="createSwimGroupSubmit()" *ngIf="authService.userType() != 'lifeguard' && (authService.userType() != 'leader'||authService.admin())">
   <div class="form-group">
     <label for="name">Name</label>
     <div>
@@ -9,22 +9,28 @@
   </div>
 
   <label for="lifeguard">Lifeguard</label>
-  <app-lifeguard-dropdown (selectedChanged)="preAddLifeguard($event)"></app-lifeguard-dropdown>
+  <app-lifeguard-dropdown (selectedChanged)="preAddLifeguard($event)" [addAll]="false"></app-lifeguard-dropdown>
 
   <!-- Submit Button -->
   <input class="btn btn-primary" type="submit" value="Register" />
   <input class="btn btn-primary" (click) = "cancelAdd()" value="Cancel Add" />
 </form>
+<app-divisions-dropdown (selectedChanged) = "showDivision($event)" [gender]="male" [divisions]="divisions"></app-divisions-dropdown>
+<app-lifeguard-dropdown (selectedChanged) = "lifeguardFilter($event)" [addAll]="true"></app-lifeguard-dropdown>
 
-<table class="table" >
-  <tr>
-    <th>Name</th>
-    <th>Lifeguard</th>
-    <th></th>
-  </tr>
-  <tr *ngFor="let group of groups">
-    <td>{{group.data.name}}</td>
-    <td>{{group.lifeguard?.first}} {{group.lifeguard?.last}}</td>
-    <td><a class="btn btn-primary" [routerLink]="['/swim-group',group.data._id]">View</a><button *ngIf="authService.admin()" class="btn btn-primary" (click) = "removeGroup(group.data._id)">X</button></td>
-  </tr>
-</table>
+<div *ngIf="groups">
+  <div *ngFor="let division of getGroupDivisions()">
+  <h2>{{division}}</h2>
+  <table class="table" >
+    <tr>
+      <th>Name</th>
+      <th>Lifeguard</th>
+      <th></th>
+    </tr>
+    <tr *ngFor="let group of groups[division]">
+      <td>{{group.data.name}}</td>
+      <td>{{group.lifeguard?.first}} {{group.lifeguard?.last}}</td>
+      <td><a class="btn btn-primary" [routerLink]="['/swim-group',group.data._id]">View</a><button *ngIf="authService.admin()" class="btn btn-primary" (click) = "removeGroup(group.data._id)">X</button></td>
+    </tr>
+  </table>
+</div>
