--- a/client/src/app/components/swim-stat/swim-stat.component.html
+++ b/client/src/app/components/swim-stat/swim-stat.component.html
@@ -1,8 +1,7 @@
 <app-loading *ngIf="loading"></app-loading>
 <app-back-button></app-back-button>
-
+<h1 *ngIf="camper">{{camper.first}} {{camper.last}}</h1>
 <div *ngIf="camper?.cSwimOpts.currentLevel">
-  <h1>{{camper.first}} {{camper.last}}</h1>
   <h1>Red Cross Level {{camper.cSwimOpts.currentLevel.rcLevel}} - {{camper.cSwimOpts.currentLevel.name}}</h1>
   <h3>Animals:</h3>
   <div *ngFor="let animal of camper.cSwimOpts.currentLevel.animals">
@@ -10,7 +9,7 @@
     <ul>
       <li *ngFor="let skill of animal.skills">
         {{skill.skill}}
-        <input type="checkbox" [checked]="skill.completed" [disabled]="camper.cSwimOpts.currentLevel.completed" (change)="checkSkill($event,animal._id,skill._id)">
+        <input type="checkbox" [checked]="skill.completed" [disabled]="camper.cSwimOpts.currentLevel.completed || (authService.userType() == 'leader' && !authService.admin())" (change)="checkSkill($event,animal._id,skill._id)">
       </li>  
     </ul>
   </div>
@@ -18,24 +17,25 @@
     <ul>
       <li *ngFor="let skill of camper.cSwimOpts.currentLevel.exitSkills">
         {{skill.skill}}
-        <input type="checkbox" [checked]="skill.completed" [disabled]="camper.cSwimOpts.currentLevel.completed" (change)="checkExitSkill($event,skill._id)">
+        <input type="checkbox" [checked]="skill.completed" [disabled]="camper.cSwimOpts.currentLevel.completed || (authService.userType() == 'leader' && !authService.admin())" (change)="checkExitSkill($event,skill._id)">
       </li>  
     </ul>
-  <button class="btn btn-primary" *ngIf="!camper.cSwimOpts.currentLevel.completed" (click)="levelComplete()">Level Complete</button>
+  <button class="btn btn-primary" *ngIf="!camper.cSwimOpts.currentLevel.completed && (authService.userType() != 'leader' || authService.admin())" (click)="levelComplete()">Level Complete</button>
+  <button class="btn btn-primary" (click)="goToReport(-1)">View Report PDF</button>
 </div>
 <div *ngIf="!camper?.cSwimOpts.currentLevel">
     <app-swim-level-dropdown (selectedChanged) = "preAddLevel($event)" [all]="false"></app-swim-level-dropdown>
     <button class="btn btn-primary" (click)="levelSet()">Set Level</button>
 </div>
 <h2 *ngIf="camper">Swim Bracelet: {{camper.cSwimOpts.bracelet}}</h2>
-<select (change)="changeBracelet($event);" class="form-control">
+<select (change)="changeBracelet($event);" class="form-control" *ngIf="authService.userType() != 'leader'|| authService.admin()">
   <option value="none">none</option>
   <option value="green">green</option>
   <option value="orange">orange</option>
 </select>
 <div *ngIf="camper?.cSwimOpts?.completedLevels">
   <h2>Archive</h2>
-  <div *ngFor="let level of camper.cSwimOpts.completedLevels">
+  <div *ngFor="let level of camper.cSwimOpts.completedLevels" (click)="goToReport(level)">
       <h2>Red Cross Level {{level.rcLevel}} - {{level.name}} completed in {{level.sessionCompleted.name}}</h2>
   </div>
 </div>
